# danmaku-wasm

./: .gitignore  Cargo.toml  NEXTACTIONS.md  PLAN.md  README.md  index.html  package-lock.json  package.json  plan.md  vercel.json  webpack.config.js
.cursor/rules/: test.mdc
css/: style.css
js/: 3d-game.js  controls.js  game.js
js_backup/: index.html
js_backup/js/: entities.js  game.js
src/: bullet.rs  collision.rs  game.rs  lib.rs  main.rs  patterns.rs  player.rs  utils.rs
www/: index.html  index.js  style.css
