[package]
edition = "2021"
name = "danmaku-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = {version = "0.1.7", optional = true}
getrandom = {version = "0.2.10", features = ["js"]}
js-sys = "0.3.64"
nalgebra = "0.32.3"
rand = {version = "0.8.5", features = ["small_rng"]}
wasm-bindgen = "0.2.87"
web-sys = {version = "0.3.64", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "CanvasRenderingContext2d",
  "Performance",
  "KeyboardEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
]}

[features]
default = ["console_error_panic_hook"]
