[package]
edition = "2021"
name = "danmaku-bevy"
version = "0.1.0"

# 移除lib配置以便使用main.rs作为唯一入口点

[dependencies]
bevy = "0.12"
console_error_panic_hook = {version = "0.1.7", optional = true}
rand = {version = "0.8.5", features = ["small_rng"]}
# 添加uuid依赖，确保在WASM中正常工作
uuid = {version = "1.0", features = ["v4", "js"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

# For final builds
[profile.release]
codegen-units = 1
lto = true

# Dynamic linking for faster compile during development
[target.'cfg(target_os = "linux")'.dependencies.bevy]
features = ["dynamic_linking"]
version = "0.12"

# For WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.12", default-features = false, features = [
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "png",
  "webgl2",
]}
getrandom = {version = "0.2", features = ["js"]}

[features]
default = ["console_error_panic_hook"]
